istio/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway-ingress
  http:
  - route:
    - destination:
        host: echoserver
        subset: v1
      weight: 50  
    - destination:
        host: echoserver
        subset: v2 
      weight: 50
